Update and rename Sachi1b.html to Practical1.html

--- a/Practical1.html
+++ b/Practical1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Samyak Pusate</title>
+    <title>Sachi Sathe</title>
     <h1>Practical 1.B</h1>
     <h5>Aim: Study HTML5 architecture and implement basic HTML5 tags.</h5>
 </head>
@@ -20,3 +20,4 @@
     <h4>END</h4>
 </body>
 </html>
+
